--- a/README.mkd
+++ b/README.mkd
@@ -1,49 +1,41 @@
-Release Notes - SABnzbd 3.3.0 Beta 4
+Release Notes - SABnzbd 3.3.0 Release Candidate 1
 =========================================================
-
-## Changes and bugfixes since 3.3.0 Beta 3
-- Allow setting `inet_exposure` from the command line.
-- Optimize performance of par2 file parsing.
-- CPU usage optimizations in the download process.
-- Post-processing would crash if there were no files to unpack.
-- Setting `RSS rate` would result in a crash.
-
-## Changes and bugfixes since 3.3.0 Beta 2
-- Failing articles could result in jobs being stuck at 99%.
-- Some NZB files would incorrectly be marked as empty.
-- CRC/yEnc errors would be counted twice as bad articles.
-- API-call `history` would not filter active post-processing `nzo_ids`.
-- RSS `Read All Feeds` button would result in a crash.
-- Support prefix and netmask for `local_ranges`.
-- Windows: `Deobfuscate final filenames` could fail to deobfuscate.
-
-## Changes and bugfixes since 3.3.0 Beta 1
-- Binaries would show an error when starting.
 
 ## Changes since 3.2.1
 - The `External internet access` will automatically detect local network
-  and no longer requires the ranges to be defined. Custom ranges can still
-  be defined through `local_ranges` in Special settings.
+  and no longer requires local network ranges to be defined. Custom ranges 
+  can still be defined through `local_ranges` in Special settings.
+- Allow setting `inet_exposure` from the command line.
+- Support prefix and netmask for Special setting `local_ranges`.
 - The `Unwanted extensions` detection can be set to `Whitelist`-mode. 
   This will block or pause all jobs with non-matching extensions.
 - Servers article statistics are shown in K, G, M-notation.
 - Resolution added as a pattern key (`%r`) for Sorting.
+- Optimized performance of par2 file parsing.
+- CPU usage optimizations in the download process.
 - Revised handling of categories, scripts, and priorities when adding NZB's.
 - Download statistics are also shown when no History is shown.
 - Confirm rename if Direct Unpack is active for the job.
 - Obfuscated-RAR detection will always be performed.
 - All requests will be logged, not just API calls.
+- Windows/macOS: Update UnRar to 6.0.1.
+- Windows: Update Multipar to 1.3.1.7 (adds faster verification).
 
-## Bugfixes since 3.1.1
+## Bugfixes since 3.2.1
 - Prevent failed post-processing if job name ends in multiple dots or spaces.
+- Failing articles could result in jobs being stuck at 99%.
 - Jobs could be stuck in the queue or duplicate if they had missing articles.
+- CRC/yEnc errors would be counted twice as bad articles.
+- Some NZB files would incorrectly be marked as empty.
+- API-call `history` would not filter active post-processing by `nzo_ids`.
 - Login page could be accessed even if `External internet access` was set
-  to `No access`. All other access would still be blocked.
+  to `No access`. Any other calls would still be blocked.
 - Ignore duplicate files inside messy NZB's.
-- macOS: disk space would be incorrect for very large disks.
+- Windows: `Deobfuscate final filenames` could fail to deobfuscate.
+- macOS: Disk space would be incorrect for very large disks.
 
 ## Upgrade notices
-- The download statistics file `totals10.sab` is updated in this 
+- The download statistics file `totals10.sab` is updated in 3.2.x 
   version. If you downgrade to 3.1.x or lower, detailed download 
   statistics will be lost.
 
