--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 3.3.1 Release Candidate 1
+Release Notes - SABnzbd 3.3.1
 =========================================================
 
 ## Changes and bugfixes since 3.3.0
@@ -7,6 +7,7 @@ Release Notes - SABnzbd 3.3.1 Release Candidate 1
 - Open the desired tab directly by URL in Glitter tabbed-mode.
 - Some filenames could be missed when parsing the NZB file.
 - API-call `history` would not filter active post-processing by `nzo_ids`.
+- Passwords for encrypted jobs were tried in a random order.
 - Clean invalid data from download statistics.
 
 ## Changes since 3.2.1
