--- a/README.mkd
+++ b/README.mkd
@@ -1,12 +1,16 @@
-Release Notes - SABnzbd 3.4.2 Release Candidate 1
+Release Notes - SABnzbd 3.4.2 Release Candidate 2
 =========================================================
 
 ## Bugfixes since 3.4.1
+- Sorting requires at least 1 category te be selected since 3.4.0.
+  Warning will be shown if no category is selected.
+- Job failure due to Sorting-problems was not shown in the History.
 - Crash when `.par2` files were missing during download.
 - Prevent scanning the whole file to identify the correct extension.
-- `.rXX` extensions were renamed to `.rXX.rar`.
+- `.rXX`, `.cbz` and `.cbr` extensions were wrongly renamed.
 - Processing unpacked `.par2` files would also process source
   `.par2` files and could result in duplicate (`.1`) filenames.
+- Always show number of MB missing during download.
 
 ## Bugfixes since 3.4.0
 - macOS: Failed to run on M1 systems or older macOS versions.
