--- a/README.mkd
+++ b/README.mkd
@@ -1,17 +1,5 @@
-Release Notes - SABnzbd 3.5.0 Beta 3
+Release Notes - SABnzbd 3.5.0 Release Candidate 1
 =========================================================
-
-## Changes since 3.5.0 Beta 2
-- Reduced memory usage during and after parsing `.nzb` files.
-- Added option to preserve paused state after a restart.
-- `unrar` logging of Direct Unpack was not logged if it was aborted.
-
-## Changes since 3.5.0 Beta 1
-- Updated news server SSL setup due to changes in Python 3.10.
-- Setting custom ciphers forces the maximum TLS version to 1.2.
-- Handle multiple passwords stored in NZB-file.
-- Print low-level Windows status error on `IOError`.
-- macOS: full native support for M1 systems.
 
 ## Changes since 3.4.2
 - Removed Python 3.6 support.
@@ -19,12 +7,27 @@ Release Notes - SABnzbd 3.5.0 Beta 3
 - Restored support for UUencoded jobs.
 - `Required` server option: in case of connection failures, the queue
   will be paused for a few minutes instead of skipping the server.
-- Require TLSv1.2 or higher for SSL news server connections.
-- macOS/Windows: updated to Python 3.10.
-- macOS: native support for M1 systems.
+- Added Special option to preserve paused state after a restart.
+- Show an estimated time-left indicator for repair and unpacking. 
+- Require TLS version 1.2 or higher for SSL news server connections.
+- Setting custom ciphers forces the maximum TLS version to 1.2.
+- Print low-level Windows status error on `IOError`.
+- Reduced memory usage during and after parsing `.nzb` files.
+- Handle multiple passwords stored in NZB-file.
+- macOS/Linux: `Permissions` are only applied if any are set.
+- macOS/Windows: updated to Python 3.10.1.
+- macOS: run native on M1 systems. However, included tools 
+  (`par2`, `unrar` and `7za`) still require Rosetta emulation.
+- Snap: updated to `core20` base and restore 7zip support.
 
 ## Bugfixes since 3.4.2
 - Email notification setting was not shown correctly.
+- Improvements and fixes for `Defobfuscate final filenames`.
+- `Post-Process Only Verified Jobs` would not always work as intended.
+- Correctly detect too little disk space when unpacking 7zip's.
+- Improvements to handling of repair by MultiPar and par2cmdline.
+- On Retry the number of downloaded bytes could exceed the total bytes.
+- `unrar` logging of Direct Unpack was not logged if it was aborted.
 - Windows: `portable.cmd` was not included in the release.
 
 ## Upgrade notices
@@ -42,4 +45,4 @@ Release Notes - SABnzbd 3.5.0 Beta 3
   that automatically verify, repair, extract and clean up posts downloaded
   from Usenet.
 
-  (c) Copyright 2007-2021 by "The SABnzbd-team" \<team@sabnzbd.org\>
+  (c) Copyright 2007-2022 by "The SABnzbd-team" \<team@sabnzbd.org\>
