--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,10 @@
-Release Notes - SABnzbd 3.5.0 Release Candidate 1
+Release Notes - SABnzbd 3.5.0 Release Candidate 2
 =========================================================
+
+## Changes and bugfixes since 3.5.0 Release Candidate 1
+- `Defobfuscate final filenames` is skipped for DVD's and Blu-ray's.
+- HTML characters in configuration fields were shown incorrectly. 
+- Global interface settings would not always be applied correctly.
 
 ## Changes since 3.4.2
 - Removed Python 3.6 support.
