--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,9 @@
-Release Notes - SABnzbd 3.5.0 Release Candidate 2
+Release Notes - SABnzbd 3.5.0 Release Candidate 3
 =========================================================
+
+## Changes and bugfixes since 3.5.0 Release Candidate 2
+- Failed 7zip unpack was not reported.
+- Multivolume 7zip's were not always unpacked.
 
 ## Changes and bugfixes since 3.5.0 Release Candidate 1
 - `Defobfuscate final filenames` is skipped for DVD's and Blu-ray's.
