--- a/README.mkd
+++ b/README.mkd
@@ -1,5 +1,10 @@
-Release Notes - SABnzbd 3.5.0
+Release Notes - SABnzbd 3.5.1 Release Candidate 1
 =========================================================
+
+## Changes and bugfixes since 3.5.0
+- Small changes in file assembly and Direct Unpack processing.
+- RSS feeds with HTML-characters in the name resulted in crashes.
+- macOS: failed to start on older macOS versions.
 
 ## Changes since 3.4.2
 - Removed Python 3.6 support.
@@ -8,14 +13,14 @@ Release Notes - SABnzbd 3.5.0
 - `Required` server option: in case of connection failures, the queue
   will be paused for a few minutes instead of skipping the server.
 - Added Special option to preserve paused state after a restart.
-- Show an estimated time-left indicator for repair and unpacking. 
+- Show an estimated time-left indicator for repair and unpacking.
 - Require TLS version 1.2 or higher for SSL news server connections.
 - Setting custom ciphers forces the maximum TLS version to 1.2.
 - Reduced memory usage during and after parsing `.nzb` files.
 - Handle multiple passwords stored in NZB-file.
 - macOS/Linux: `Permissions` are only applied if any are set.
 - macOS/Windows: updated to Python 3.10.2.
-- macOS: run native on M1 systems. However, included tools 
+- macOS: run native on M1 systems. However, included tools
   (`par2`, `unrar` and `7za`) still require Rosetta emulation.
 - Snap: updated to `core20` base and restore 7zip support.
 
@@ -33,8 +38,8 @@ Release Notes - SABnzbd 3.5.0
 - Windows: print low-level Windows error on `IOError`.
 
 ## Upgrade notices
-- The download statistics file `totals10.sab` is updated in 3.2.x 
-  version. If you downgrade to 3.1.x or lower, detailed download 
+- The download statistics file `totals10.sab` is updated in 3.2.x
+  version. If you downgrade to 3.1.x or lower, detailed download
   statistics will be lost.
 
 ## Known problems and solutions
