--- a/README.mkd
+++ b/README.mkd
@@ -1,7 +1,8 @@
-Release Notes - SABnzbd 3.5.1 Release Candidate 2
+Release Notes - SABnzbd 3.5.1
 =========================================================
 
 ## Changes and bugfixes since 3.5.0
+- Prevent permissions errors on systems that do not support them.
 - Small changes in file assembly and Direct Unpack processing.
 - Changes to the transition from download to active post-processing.
 - Malformed NZB files could result in a crash.
